2007-11-19 [colin]	3.1.0cvs8

	* src/prefs_summaries.c
	* src/summaryview.c
		Don't enable more tooltips on Maemo

2007-11-19 [colin]	3.1.0cvs7

	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_summaries.c
	* src/summaryview.c
		Fix bug 1388, 'message list tool tips'
		Add (optional) tooltips in summaryview.
		This only works with GTK+ >= 2.12

2007-11-19 [colin]	3.1.0cvs6

	* src/compose.c
		Make strings a bit better when attaching
		from mailto: URIs

2007-11-19 [colin]	3.1.0cvs5

	* src/common/utils.c
		Fix bug 1392, 'Top level domain .EU is 
		not recognised as valid'

2007-11-19 [wwp]	3.1.0cvs4

	* src/compose.c
	* src/compose.h
		Revert changes to compose.c made in 3.1.0cvs2.

2007-11-19 [wwp]	3.1.0cvs3

	* src/addressbook.c
	* src/addressbook.h
	* src/editaddress.c
	* src/editgroup.c
	* src/addrduplicates.c
		Minor improvements in the address book:
		always accept new contacts provided that some
		detail is set (instead of rejecting silently).
		Better guessing of contact name from incomplete
		name information. Better display of contacts with
		no name, in contact lists, group contents, find
		duplicate results.
		

2007-11-19 [wwp]	3.1.0cvs2

	* src/compose.c
	* src/compose.h
	* src/prefs_logging.c
	* src/prefs_summaries.c
		GUI improvements, thanks to Pawel Pekala <c0rn@o2.pl>:
		wrap some long label in prefs/summaries, layout checkboxes
		in a more compact form in prefs/loggin, make account and
		header's combos have the same size/spacing in compose
		window.

2007-11-19 [wwp]	3.1.0cvs1

	* src/edittags.c
		Fix a tiny leak and duplicate variable.

2007-11-19 [paul]	3.1.0

	* NEWS
	* README
	* RELEASE_NOTES	
		3.1.0 released

2007-11-19 [paul]	3.0.2cvs145

	* po/de.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Stephan Sachse, Flammie Pirinen,
		Fabien Vantard, Pader Rezso, Andrea Spadaccini,
		Emil Nowak, Frederico Goncalves Guimaraes,
		Andrej Kacian, and Ralph Young
